whitespace fixes